# demo-data-science-template

./: .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml
.code_quality/: ruff.toml
.devcontainer/: devcontainer.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: automerge.yml  ci.yml  docs.yml  labels.yml  test.yml
conf/: config.yaml  data_extraction.yaml  data_preparation.yaml  data_validation.yaml  model_evaluation.yaml  model_training.yaml  model_validation.yaml
data/01_raw/: titanic_raw.parquet
data/02_intermediate/: titanic_type_fixed.parquet
docker-fastapi/: model_deploy.py  pyproject.toml  titanic_classification-random_forest-v1.joblib
models/: titanic_classification-random_forest-v1.joblib
notebooks/: README.md
notebooks/1-data/: 01-jrz-download_data-2024_02_27.ipynb
notebooks/2-exploration/: 01-jrz-data_explore_description-2024_03_01.ipynb
notebooks/3-analysis/: 01-jrz-data_description_YData Profiling-2024_03_01.ipynb  02-jrz-data_description_Manual-2024_10_24.ipynb  02-jrz-data_description_Manual-pandas-2024_10_24.ipynb  03-jrz-univariate-data_description_Manual-pandas-2024_10_24.ipynb  04-jrz-bivariate_description_Manual-pandas-2024_10_24.ipynb  05-jrz-multivariate-description_Manual-pandas-2024_10_24.ipynb
notebooks/4-feat_eng/: 01-jrz-basic-feature-engineering-pipeline-2024_10_24.ipynb
notebooks/5-models/: 01-jrz-heuristic_model-2024_10_29.ipynb  02-jrz-basic_algorithms_model_selection-2024_11_02.ipynb  03-jrz-first_model-2025_02_27.ipynb  04-jrz-experiment-track-model-2025_05_12.ipynb  05-jrz-deepcheck-ML-process-2025_05_13.ipynb  train_model_pipeline.py  train_model_pipeline_hardtype.py
notebooks/6-interpretation/: 01-jrz-random_forest-interpretation-2025_01_30.ipynb
notebooks/7-deploy/: titanic-streamlit-batch.py  titanic-streamlit.py
search/: search_index.json
src/data/data_extraction/: data_extraction.py
src/data/data_validation/: data_validation.py
src/inference/: model_deploy.py
src/libs/data_etl/: data_etl.py
src/pipelines/: data_extraction.py  etl_pipeline.py  simple_train_pipeline.py
src/pipelines/data_extraction/: data_extraction_pipeline.py  pipeline.py
src/pipelines/data_preparation/: preprocess_pipeline.py
src/pipelines/data_validation/: pipeline.py
src/pipelines/etl/: basic_etl_pipeline.py
tests/data/: __init__.py
tests/data/data_extraction/: test_data_extraction.py
tests/data/data_validation/: test_data_validation.py
tests/inference/: test_model_deploy.py
tests/libs/data_etl/: test_data_etl.py
tests/libs/data_extraction/: test_data_extraction.py
tests/pipeline/: test_data_extraction.py
tests/pipeline/data_extraction/: test_data_extraction_pipeline.py
tests/pipeline/etl/: test_basic_etl_pipeline.py
tests/pipelines/: __init__.py  test_data_extraction.py  test_etl_pipeline.py  test_etl_pipeline_coverage.py
tests/pipelines/data_extraction/: test_data_extraction_pipeline.py  test_data_type_conversion.py  test_pipeline.py
tests/pipelines/data_preparation/: test_preprocess_pipeline.py
tests/pipelines/data_validation/: test_pipeline.py
tests/pipelines/feature_pipeline/: test_data_extraction_pipeline.py
