[tool.poetry]
name = "Demo data science template"
version = "0.1.0"
description = "Demo of a data science proyect using de data science template https://github.com/JoseRZapata/data-science-project-template"
authors = [
    "Jose R. Zapata <https://joserzapata.github.io/>",
]
readme = "README.md"
documentation = "https://JoseRZapata.github.io/demo-data-science-template"
repository = "https://github.com/JoseRZapata/demo-data-science-template"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.12"
hydra-core = "^1.1.1"
pandas = {extras = ["parquet"], version = "^2.2.3"}
scikit-learn = "^1.6.1"
scipy = "^1.13.1"
numpy = "2.1.3"
deepchecks = "^0.19.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.16.0"} # Automated Cookiecutter template synchronization
jupyter = "^1.1.1"
matplotlib = "^3.9.4"
ydata-profiling = {extras = ["notebook"], version = "^4.12.1"}
seaborn = "0.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"

#
pandas-stubs = "^2.2.3.241126"
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pymdown-extensions = "^10.14"
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
