[project]
name = "demo-data-science-template"
version = "0.2.0"
description = "Demo of a data science proyect using de data science template https://github.com/JoseRZapata/data-science-project-template"
authors = [{ name = "Jose R. Zapata", email = "https://joserzapata.github.io/" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "hydra-core>=1.1.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "deepchecks>=0.19.1",
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "pyarrow>=19.0.0",
    "streamlit>=1.42.0",
    "loguru>=0.7.3",
]

[project.urls]
Repository = "https://github.com/JoseRZapata/demo-data-science-template"
Documentation = "https://JoseRZapata.github.io/demo-data-science-template"

[dependency-groups]
dev = [
    "cruft[pyproject]>=2.16.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "seaborn==0.13.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.0.0",
    "pandas-stubs>=2.2.3.241126",
    "ydata-profiling[notebooks]>=4.12.1",
    "pytest-mock>=3.14.0",
    "watermark>=2.5.0",
    "mlflow>=2.22.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions~=10.14.3",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py",
        "src/pipelines/simple_train_pipeline.py"]
